docs/book/samples/appc/call_paren_check.out
error[formatting]: canonical form requires exactly one space here
  --> call_paren_check.kso:1:13
   1 | main = print("hi")
                   ^
